@@ -11,12 +11,24 @@ sub new {
     my $version = $self->_backticks($gettext, '--version');
     if (!$version || $version =~ /--version/) {
         print STDERR '#' x 64, "\n",
-        "# Cannot find compatible GNU gettext in PATH; Download it from:\n",
+        "# Cannot find compatible GNU gettext in PATH. Download it from:\n",
         "#     http://www.gnu.org/software/gettext/gettext.html\n",
         "# Aborting build.\n",
         '#' x 64, "\n\n";
         exit 255;
     }
+
+    my ($maj, $min, $patch) = $version =~ /(\d+)[.](\d+)(?:[.](\d+))?$/ms;
+    if (!($maj || $min) || !($maj > 0 || $min >= 17)) {
+        print STDERR '#' x 64, "\n",
+        "# Need GNU gettext v0.17.0 or higher; found $maj.$min.$patch in PATH.\n",
+        "# Download latest from:\n",
+        "#     http://www.gnu.org/software/gettext/gettext.html\n",
+        "# Aborting build.\n",
+        '#' x 64, "\n\n";
+        exit 255;
+    }
+
     return $self;
 }
 
