@@ -3,6 +3,9 @@ Revision history for Perl extension Dist-Zilla-LocaleTextDomain
 0.86
      - Added diagnostic output to some tests to help figure out why they fail
        on some platforms.
+     - Added code to the installer to throw an error if the version of GNU
+       gettext appears to be less then v0.17.0. v0.17.0 is required for the
+       `--package-name` and `--package-version` options.
 
 0.85  2013-01-08T23:07:42Z
      - Changed `msg-compile` to take a list of file names, rather than
